added enpoint for update individual table
