# src/routes/cartodb.route.ts
@@ -13,7 +13,8 @@ import {
   getRetailer,
   insertIntoPHAIndividual,
   insertIntoPHARetailer,
-  mapQuery
+  mapQuery,
+  updateIndividual,
 } from '../services/cartodb.service';
 import { FiltersInterface, QueryParams, RequestWithFiles } from '../@types';
 import { filtersMiddleware } from '../middlewares/filtersMiddleware';
@@ -142,6 +143,18 @@ router.post('/pha-individual', [phaIndividualMiddleware], async (req: Request, r
   try {
     const data = await insertIntoPHAIndividual(individual);
     res.send({ data: data, sucess: true });
+  } catch (error) {
+    next(error);
+  }
+});
+
+router.put('/pha-individual/:id',async (req:Request, res: Response, next: NextFunction) => {
+  const { body } = req;
+  const individual = body as PhaIndividual;
+  const individualId: string = req.params.id;
+  try {
+    const response = await updateIndividual(individual, individualId);
+    res.json({data: response, sucess: true});
   } catch (error) {
     next(error);
   }
